@@ -11,4 +11,7 @@ homepage   = http://search.cpan.org/dist/Dist-Zilla-Plugin-CompileTests
 repository = http://github.com/jquelin/dist-zilla-plugin-compiletests
 ;MailingList = none
 
+[Prereqs / TestRequires]
+Test::NeedsDisplay  = 0
+
 [@JQUELIN]
